--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "axios": "^1.7.7",
     "isomorphic-ws": "^5.0.0",
+    "lodash": "^4.17.21",
     "mongodb": "^6.10.0",
     "next": "15.0.3",
     "primereact": "^10.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.53.2"
+    "react-hook-form": "^7.53.2",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
